--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,26 +1,21 @@
 // bower:scss
 // endbower
 
-body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
-}
+@import 'reset';
+@import 'buttons';
+@import 'brand-header';
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+
+html, body {
+  height: 100%;
+}
+body {
+  min-width: 320px;
+  background: #fafafa;
+  font-family: 'TeleGrotesk', Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+
 }
 
 .browserupgrade {
@@ -29,3 +24,121 @@ body {
   color: #000;
   padding: 0.2em 0;
 }
+
+
+
+
+// settings
+.container-fluid {
+  width: 100%;
+  max-width: $maxWidth;
+  margin: 0 auto;
+  padding-left: 0.8333em;
+  padding-right: 0.8333em;
+}
+
+.nav-container {
+  h2 {
+    // text-transform: uppercase;
+    // font-family: 'TeleGroteskScreen';
+    // font-weight: 800;
+    // font-size: 2 * $bu;
+    // line-height: $bu*6;
+    // letter-spacing: 1px;
+    // float: left;
+
+    text-transform: uppercase;
+    font-family: 'TeleGroteskScreen';
+    font-weight: 800;
+    font-size: $bu;
+    line-height: 6em;
+    //letter-spacing: px;
+    float: left;
+    
+
+
+
+  }
+  // 400
+  @media screen and (min-width: 25em) {
+    h2 {
+      font-size: $bu*1.2;
+      line-height: 5em;
+    }
+  }
+  // 540
+  @media screen and (min-width: 33.75em) {
+    h2 {
+      font-size: $bu*1.5;
+      line-height: 4em;
+    }
+  }
+  @media screen and (min-width: 38.75em) {
+    h2 {
+      font-size: $bu*2; // 24
+      line-height: 3em; // 72
+    }
+  }
+}
+
+#welcome {
+  max-height: 40.625em;
+  height: 80%;
+  display: table;
+  width: 100%;
+}
+.hero-unit {
+  
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  > div {
+    
+  }
+  h2 {
+    font-family: 'TeleGrotesk';
+    font-weight: 600;
+    font-size: 1.75em;
+    margin-bottom: .75em;
+  }
+  p {
+    font-family: 'TeleGrotesk';
+    font-weight: 400;
+    margin-bottom: 2.5em;
+    a.button {
+      font-size: 1.125em;
+    }
+  }
+}
+
+
+footer {
+  border-top: 1px solid #ededed;
+  .copyright {
+    float: left;
+    p {
+      font-size: $bu*1.0833333;
+      line-height: $bu*6;
+      padding-left: $bu*2;
+      text-transform: uppercase;
+      color: #757575;
+    }
+  }
+}
+
+
+
+/**
+ * 16.4 Desktop Small 955px
+ *
+ * DESKTOP NAVI STARTS HERE
+ */
+@media screen and (min-width: 59.6875em) {
+
+}
+
+
+
+
+
