--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,7 @@ html, body {
 }
 body {
   min-width: 320px;
-  background: #fafafa;
+  background: #fff;
   font-family: 'TeleGrotesk', Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #333;
@@ -28,6 +28,12 @@ body {
 
 
 
+
+
+
+
+
+
 // settings
 .container-fluid {
   width: 100%;
@@ -39,14 +45,6 @@ body {
 
 .nav-container {
   h2 {
-    // text-transform: uppercase;
-    // font-family: 'TeleGroteskScreen';
-    // font-weight: 800;
-    // font-size: 2 * $bu;
-    // line-height: $bu*6;
-    // letter-spacing: 1px;
-    // float: left;
-
     text-transform: uppercase;
     font-family: 'TeleGroteskScreen';
     font-weight: 800;
@@ -54,10 +52,6 @@ body {
     line-height: 6em;
     //letter-spacing: px;
     float: left;
-    
-
-
-
   }
   // 400
   @media screen and (min-width: 25em) {
@@ -77,52 +71,184 @@ body {
     h2 {
       font-size: $bu*2; // 24
       line-height: 3em; // 72
+      letter-spacing: 1.1;
     }
   }
 }
-
+main {
+  height: auto;
+  //min-height: 40.625em;
+  height: 40.625em;
+}
 #welcome {
-  max-height: 40.625em;
-  height: 80%;
+  //min-height: 40.625em;
+  height: 40.625em;
+  height: 100vh;
+  //height: 65%;
   display: table;
   width: 100%;
-}
-.hero-unit {
-  
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  > div {
-    
+  -moz-transition: height 1s ease;
+  -webkit-transition: height 1s ease;
+  -o-transition: height 1s ease;
+  transition: height 1s ease;
+  .hero-unit {
+    height: 100%;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    > div {
+    }
+    h2 {
+      font-family: 'TeleGrotesk';
+      font-weight: 600;
+      //font-size: 1.75em;
+      font-size: 1.3em;
+      //margin-bottom: .45em;
+      margin-bottom: .45em;
+    }
+    p {
+      font-family: 'TeleGrotesk';
+      font-weight: 400;
+      margin-bottom: 1.5em;
+      a.button {
+        font-size: 1.125em;
+      }
+    }
   }
-  h2 {
-    font-family: 'TeleGrotesk';
-    font-weight: 600;
-    font-size: 1.75em;
-    margin-bottom: .75em;
+  @media screen and (min-width: 40em) {
+    height: 100%;
+    .hero-unit {
+      h2 {
+        font-size: 1.5em;
+        margin-bottom: .75em;
+      }
+      p {
+        margin-bottom: 2.5em;
+      }
+    }
   }
-  p {
-    font-family: 'TeleGrotesk';
-    font-weight: 400;
-    margin-bottom: 2.5em;
-    a.button {
-      font-size: 1.125em;
+  @media screen and (min-width: 50em) {
+    height: 100%;
+    .hero-unit {
+      h2 {
+        font-size: 1.75em;
+      }
     }
   }
 }
 
 
-footer {
+
+
+// QUERY 
+#query {
+  display: none;
+  text-align: center;
+  #query1 { display: block; }
+  #query2 { display: none; }
+  #query3 { display: none; }
+  .query {
+
+    margin-bottom: 50px;
+    h2 {
+      font-size: 26px;
+      padding-top: 45px;
+      margin-bottom: 30px;
+      font-weight: 400;
+      opacity: 0;
+    }
+
+    .box {
+      display: inline-block;
+      opacity: 0;
+      position: relative;
+      width: 270px;
+      height: 440px;
+      vertical-align: top;
+      background: #F5F5F5;
+
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      margin-right: 36px;
+      padding: 24px 12px;
+      > div {
+        height: 194px;
+        position: relative;
+        img {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          margin-right: -50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+      p {
+        height: 160px;
+        font-size: 1.2em;
+        line-height: 1.2em;
+        text-align: left;
+      }
+      p + a {
+        font-size: 1.2em;
+      }
+    }
+    .box:last-child {
+      margin-right: 0;
+    }
+
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.dtx footer {
   border-top: 1px solid #ededed;
   .copyright {
-    float: left;
+    float: none;
     p {
       font-size: $bu*1.0833333;
-      line-height: $bu*6;
+      line-height: 5em;
       padding-left: $bu*2;
       text-transform: uppercase;
       color: #757575;
+    }
+    
+  }
+  nav {
+    ul {
+      li {
+        display: inline;
+      }
+    }
+  }
+  @media screen and (min-width: 40em) {
+    .copyright {
+      float: left;
+      p {
+        line-height: 72px;
+      }
+    }
+    nav {
+      float: right;
+      ul {
+        li {
+          display: table-cell;
+        }
+      }
     }
   }
 }
@@ -139,6 +265,10 @@ footer {
 }
 
 
+
+// TEMPORARY
+// #welcome { display: none; }
+// #query {display: block; }
 
 
 
