--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,7 +10,8 @@ html, body {
   height: 100%;
 }
 body {
-  min-width: 320px;
+   min-width: 320px;
+  //min-width: 950px;
   background: #fff;
   font-family: 'TeleGrotesk', Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -53,6 +54,7 @@ body {
     //letter-spacing: px;
     float: left;
   }
+
   // 400
   @media screen and (min-width: 25em) {
     h2 {
@@ -76,27 +78,31 @@ body {
   }
 }
 main {
-  height: auto;
+  //height: 100%;
   //min-height: 40.625em;
-  height: 40.625em;
+  min-height: 40.625em;
+  width: 100%;
+  display: table;
 }
 #welcome {
   //min-height: 40.625em;
   height: 40.625em;
   height: 100vh;
   //height: 65%;
-  display: table;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
   width: 100%;
   -moz-transition: height 1s ease;
   -webkit-transition: height 1s ease;
   -o-transition: height 1s ease;
   transition: height 1s ease;
   .hero-unit {
-    height: 100%;
+    //height: 100%;
     text-align: center;
-    display: table-cell;
+    
     vertical-align: middle;
-    text-align: center;
+    
     > div {
     }
     h2 {
@@ -139,7 +145,18 @@ main {
 }
 
 
+.box {
+  display: inline-block;
+  //opacity: 0;
+  position: relative;
+  vertical-align: top;
+  background: #F5F5F5;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 
+  padding: 24px 12px;
+}
 
 // QUERY 
 #query {
@@ -149,8 +166,8 @@ main {
   #query2 { display: none; }
   #query3 { display: none; }
   .query {
-
-    margin-bottom: 50px;
+    
+    margin-bottom: 40px;
     h2 {
       font-size: 26px;
       padding-top: 45px;
@@ -160,8 +177,9 @@ main {
     }
 
     .box {
-      display: inline-block;
+      display: block;
       opacity: 0;
+      margin: 0 auto;
       position: relative;
       width: 270px;
       height: 440px;
@@ -171,8 +189,9 @@ main {
       -webkit-border-radius: 10px;
       -moz-border-radius: 10px;
       border-radius: 10px;
-      margin-right: 36px;
+      //margin-right: 0px;
       padding: 24px 12px;
+      margin-bottom: 36px;
       > div {
         height: 194px;
         position: relative;
@@ -195,14 +214,194 @@ main {
       }
     }
     .box:last-child {
-      margin-right: 0;
+      margin-right: auto;
     }
 
   }
+  .status-indicator-wrapper {
+    margin-bottom: 50px;
+    ul {
+      margin: 0;
+      list-style: none;
+      li {
+        width: 100px;
+        height: 4px;
+        margin-right: 7px;
+        display: inline-block;
+        background-color: #d0d0d0;
+      }
+      li.active {
+        background-color: #e20074;
+      }
+      li:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  @media screen and (min-width: 40em) {
+    .query {
+      .box {
+        display: inline-block;
+        margin-right: 36px;
+      }
+    }
+    .status-indicator-wrapper {
+      margin-bottom: auto;
+    }
+  }
 }
 
+.resp-full {
+  display: none;
 
+  @media screen and(min-width: 40em){
+    display: block;
+  }
+}
+.resp-small {
+  display: block;
 
+  @media screen and(min-width: 40em){
+    display: none;
+  }
+}
+
+#result {
+  display: none;
+  padding-top: 10px;
+  .overview {
+    h2 {
+      display: none;
+    }
+    img {
+      width: auto;
+      max-width: 100%;
+    }
+  }
+  .box {
+    width: 100%;
+    margin-bottom: 20px;
+    padding-top: 12px;
+    overflow: hidden;
+
+    h2 {
+      font-family: 'TeleGrotesk';
+      font-size: 26px;
+      font-weight: 400;
+      margin: 0;
+      padding: 0;
+      padding-left: 40px;
+      margin-bottom: 20px;
+      letter-spacing: 1.1px;
+      width: 103%;
+
+    }
+    .img {
+      text-align: center;
+      margin-bottom: 46px;
+      img {
+        max-width: 96%;
+      }
+    }
+    .copy {
+      p {
+        margin-bottom: 20px;
+        line-height: 1.2;
+      }
+      ol {
+        margin-top: 0;
+        list-style-type: none;
+        list-style-position: outside;
+        padding: 0;
+        margin-left: -2px;
+        
+        li::before {
+          content: counter(step-counter,lower-alpha);
+
+          //margin-right: 5px;
+          //font-size: 80%;
+          //background-color: $magenta-color;
+          display: inline-block;
+          padding: 2px 0px;
+          padding-top: 0px;
+
+          background-image: url(../images/oval.svg);
+          background-repeat: no-repeat;
+          background-size: 17px 17px;
+          background-position: 0 1px;
+          width: 22px;
+          height: 18px;
+          text-indent: 5px;
+          margin-left: -25px;
+          padding-left: 0px;
+          //margin-left: 10px;
+          //margin-right: 10px;
+          color: white;
+          font-family: 'TeleGrotesk';
+          font-size: 13px;
+          font-weight: 400;
+          //line-height: 25px;
+        }
+        li {
+          //margin-bottom: 30px;
+          counter-increment: step-counter;
+          text-indent: 0px;
+          padding-left: 23px;
+          line-height: 1.20em;
+          padding-right: -5px;
+          letter-spacing: 0.2px;
+          margin-bottom: 22px;
+          font-family: 'TeleGrotesk';
+          
+          font-weight: 400;
+        }
+        li:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    @media screen and (min-width: 48.125em) {
+      .img {
+        display: inline-block;
+        width: 55%;
+        max-width: 550px;
+        vertical-align:top;
+      }
+      .copy {
+        float: right;
+        width: 37%;
+        max-width: 350px;
+        margin-right: 0;
+        vertical-align:top;
+      }
+    }
+  }
+  .box:not(.overview) {
+    counter-increment: box-counter;
+    h2::before {
+      content: counter(box-counter);
+      display: inline-block;
+      background-image: url(../images/oval.svg);
+      background-repeat: no-repeat;
+      background-size: 28px 28px;
+      width: 28px;
+      height: 28px;
+      padding-top: 5px;
+      background-position: 0 0px;
+      margin-left: -40px;
+      text-indent: 8px;
+      font-family: 'TeleGrotesk';
+      font-size: 22px;
+      font-weight: 600;
+      margin-right: 11px;
+      color: #fff;
+    }
+    h2 {
+      padding-top: 2px;
+    }
+  }
+
+}
 
 
 
@@ -220,9 +419,10 @@ main {
   .copyright {
     float: none;
     p {
-      font-size: $bu*1.0833333;
-      line-height: 5em;
-      padding-left: $bu*2;
+      
+      padding-left: 15px;
+      line-height: $bu*3;
+      font-size: $bu*1.3;
       text-transform: uppercase;
       color: #757575;
     }
@@ -239,7 +439,9 @@ main {
     .copyright {
       float: left;
       p {
+        padding-left: $bu*2;
         line-height: 72px;
+        font-size: $bu*1.0833333;
       }
     }
     nav {
@@ -265,10 +467,22 @@ main {
 }
 
 
+.stepper {
+  z-index: 2000;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  a.button {
+    font-size: 16px;
+  }
+}
+
 
 // TEMPORARY
 // #welcome { display: none; }
-// #query {display: block; }
+// #query {display: none; }
+// #result { display: block; }
+ #result .box {display: none;}
 
 
 
