--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -116,6 +116,8 @@ main {
     p {
       font-family: 'TeleGrotesk';
       font-weight: 400;
+      font-size: 1.125em;
+      letter-spacing: 0.5px;
       margin-bottom: 1.5em;
       a.button {
         font-size: 1.125em;
@@ -138,7 +140,8 @@ main {
     height: 100%;
     .hero-unit {
       h2 {
-        font-size: 1.75em;
+        font-size: 1.813em;
+        letter-spacing: 0.9px;
       }
     }
   }
@@ -159,30 +162,34 @@ main {
 }
 
 // QUERY 
-#query {
-  display: none;
+#welcome {
+  //display: none;
   text-align: center;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
   #query1 { display: block; }
-  #query2 { display: none; }
-  #query3 { display: none; }
+  //#query2 { display: none; }
+  //#query3 { display: none; }
   .query {
     
-    margin-bottom: 40px;
+    //margin-bottom: 40px;
+    margin-bottom: 90px;
     h2 {
       font-size: 26px;
       padding-top: 45px;
       margin-bottom: 30px;
       font-weight: 400;
-      opacity: 0;
+      //opacity: 0;
     }
 
     .box {
       display: block;
-      opacity: 0;
+      //opacity: 0;
       margin: 0 auto;
       position: relative;
-      width: 270px;
-      height: 440px;
+      width: 358px;
+      height: 290px;
       vertical-align: top;
       background: #F5F5F5;
 
@@ -193,21 +200,23 @@ main {
       padding: 24px 12px;
       margin-bottom: 36px;
       > div {
-        height: 194px;
+        height: 151px;
+        //height: 194px;
         position: relative;
         img {
           position: absolute;
-          top: 50%;
+          top: 46%;
           left: 50%;
           margin-right: -50%;
           transform: translate(-50%, -50%);
         }
       }
       p {
-        height: 160px;
+        //height: 160px;
         font-size: 1.2em;
         line-height: 1.2em;
-        text-align: left;
+        text-align: center;
+        height: 48px;
       }
       p + a {
         font-size: 1.2em;
