--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,15 @@
 @import 'reset';
 @import 'buttons';
 @import 'brand-header';
+@import "../bower_components/compass-sass-mixins/lib/compass";
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 
 
 html, body {
@@ -28,6 +37,44 @@ body {
 
 
 
+#preloaderwrap {
+  width: 50%;
+  margin: 0 auto;
+  width: 40%;
+  top: 40%;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%); 
+      -ms-transform: translateX(-50%); 
+          transform: translateX(-50%);
+  #progress {
+    width: 100%;
+    font-size: 30px;
+    letter-spacing: 0.1em;
+    margin: 0 auto;
+    //margin: -25px 0 0 -100px;
+    text-align: center;
+    font-family: 'TeleGrotesk';
+    font-weight: 800;
+    text-align: center;
+  }
+  #progressbar {
+    .bar {
+      //@include box-shadow(cyan 0 0 10px 1px);
+      @include transition(all 300ms);
+      background-color: #e20074;
+      height: 4px;
+      display: inline-block;
+      width: 0%;
+    }
+    
+    .bar.complete {
+      //@include box-shadow(rgba(255, 0, 0, 0) 0 0 10px 10px);
+    }
+  }
+}
+
+
 
 
 
@@ -40,8 +87,13 @@ body {
   width: 100%;
   max-width: $maxWidth;
   margin: 0 auto;
-  padding-left: 0.8333em;
-  padding-right: 0.8333em;
+  padding-left: 10px;
+  padding-right: 10px;
+  @media screen and (min-width: 31.250em) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
 }
 
 .nav-container {
@@ -86,10 +138,12 @@ main {
 }
 #welcome {
   //min-height: 40.625em;
-  height: 40.625em;
-  height: 100vh;
+  //height: 40.625em;
+  height: auto;
+  //height: 100vh;
   //height: 65%;
   display: table-cell;
+  display: none;
   text-align: center;
   vertical-align: middle;
   width: 100%;
@@ -165,22 +219,41 @@ main {
 #welcome {
   //display: none;
   text-align: center;
-  padding-top: 40px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   #query1 { display: block; }
   //#query2 { display: none; }
   //#query3 { display: none; }
+  @media screen and(min-width: 40.000em) {
+    //padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 20px;
+  }
+  @media screen and(min-width: 50.000em) {
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
   .query {
     
     //margin-bottom: 40px;
     margin-bottom: 90px;
     h2 {
-      font-size: 26px;
-      padding-top: 45px;
+      font-size: 1.3em;
+      //padding-top: 45px;
+      padding-top: 10px;
       margin-bottom: 30px;
       font-weight: 400;
-      //opacity: 0;
+      font-family: 'TeleGrotesk';
+      //font-weight: 600;
+      @media screen and(min-width: 40.000em) {
+        font-size: 1.4em;
+
+      }
+      @media screen and(min-width: 50.000em) {
+        font-size: 1.7em;
+      }
     }
 
     .box {
@@ -188,8 +261,8 @@ main {
       //opacity: 0;
       margin: 0 auto;
       position: relative;
-      width: 358px;
-      height: 290px;
+      width: 238px;
+      height: 300px;
       vertical-align: top;
       background: #F5F5F5;
 
@@ -199,6 +272,13 @@ main {
       //margin-right: 0px;
       padding: 24px 12px;
       margin-bottom: 36px;
+      @media screen and(min-width: 55.000em) {
+        width: 298px;
+      }
+      @media screen and(min-width: 55.000em) {
+        width: 358px;
+
+      }
       > div {
         height: 151px;
         //height: 194px;
@@ -216,7 +296,8 @@ main {
         font-size: 1.2em;
         line-height: 1.2em;
         text-align: center;
-        height: 48px;
+        //height: 48px;
+        margin-bottom: 20px;
       }
       p + a {
         font-size: 1.2em;
@@ -278,33 +359,35 @@ main {
 #result {
   display: none;
   padding-top: 10px;
+  overflow: hidden;
 
   .subcats {
     padding: 0;
     list-style: none;
     margin-bottom: 10px;
     padding-left: 10px;
+    padding-top: 6px;
     li {
       display: inline;
-      border-bottom: 4px solid #ededed;
       margin-right: 5px;
-      padding-bottom: 6px;
       padding-left: 2px;
       padding-right: 2px;
       a {
         font-size: 0.8em;
+        padding-bottom: 5px;
       }
       a:link, a:visited {
         color: #757575;
       }
       a:hover, a:active {
         color: #383838;
+        border-bottom: 4px solid #ededed;
       }
     }
     li.active {
-      border-bottom: 4px solid #e20074;
       a {
         color: #383838;
+        border-bottom: 4px solid #e20074;
       }
     }
 
@@ -314,6 +397,7 @@ main {
 
     @media screen and (min-width: 36.250em) {
       padding-left: 22px;
+      padding-top: 12px;
       li {
         margin-right: 9px;
         padding-left: 4px;
@@ -326,13 +410,69 @@ main {
     }
   }
 
-  .overview {
+  .box.overview {
+    height: auto;
+    min-height: 380px;
+    text-align: center;
+    position: relative;
+    //padding-top: 20px;
+    @media screen and (min-width: 47.5em) {
+      height: 380px;
+      padding-top: 40px;
+    }
     h2 {
       display: none;
     }
     img {
-      width: auto;
-      max-width: 100%;
+      //width: auto;
+      //max-width: 100%;
+    }
+    img.full {
+      width: 650px;
+    }
+    // 800
+    @media screen and (min-width: 50em){
+      height: 415px;
+      img.full { width: 720px; }
+    }
+    // 990
+    @media screen and (min-width: 61.875em){
+      height: 485px;
+      img.full { width: 899px; }
+    }
+
+    .hotspots {
+      margin: 0; padding: 0;
+      position: absolute;
+      li::before {
+        content: counter(hs-counter);
+        display: inline-block;
+        padding: 2px 0px;
+        padding-top: 0px;
+
+        background-image: url(../images/oval.svg);
+        background-repeat: no-repeat;
+        background-size: 25px 25px;
+        background-position: 0 1px;
+        width: 30px;
+        height: 30px;
+        line-height: 28px;
+        text-indent: -5px;
+        margin-left: -28px;
+        padding-left: 0px;
+        //margin-left: 10px;
+        //margin-right: 10px;
+        color: white;
+        font-family: 'TeleGrotesk';
+        font-size: 19px;
+        font-weight: 400;
+      }
+      li {
+        position: absolute;
+        counter-increment: hs-counter;
+        text-indent: 0px;
+
+      }
     }
   }
   .box {
@@ -342,23 +482,39 @@ main {
     overflow: hidden;
 
     h2 {
+      font-size: 25px;
       font-family: 'TeleGrotesk';
-      font-size: 26px;
       font-weight: 400;
       margin: 0;
       padding: 0;
       padding-left: 40px;
       margin-bottom: 20px;
       letter-spacing: 1.1px;
-      width: 103%;
+      @media screen and (min-width: 50em){
+        font-size: 25px;
+      }
+      @media screen and (min-width: 61.875em){
+        font-size: 26px;
+        width: 103%;
+      }
+
+    }
+    img.full {
+      display: none;
+    }
+    img.mobile {
+      text-align: center;
+      width: 270px;
+      display: inline-block;
+      @media screen and (min-width: 25.625em){
+        width: 370px;
+
+      }
 
     }
     .img {
       text-align: center;
-      margin-bottom: 46px;
-      img {
-        max-width: 96%;
-      }
+      //width: 545px;
     }
     .copy {
       p {
@@ -373,7 +529,7 @@ main {
         margin-left: -2px;
         
         li::before {
-          content: counter(step-counter,lower-alpha);
+          content: counter(step-counter,upper-alpha);
 
           //margin-right: 5px;
           //font-size: 80%;
@@ -385,7 +541,7 @@ main {
           background-image: url(../images/oval.svg);
           background-repeat: no-repeat;
           background-size: 17px 17px;
-          background-position: 0 1px;
+          background-position: 0 0px;
           width: 22px;
           height: 18px;
           text-indent: 5px;
@@ -417,17 +573,40 @@ main {
         }
       }
     }
-    @media screen and (min-width: 48.125em) {
+    @media screen and (min-width: 47.5em) {
+      img.mobile {
+        display: none;
+      }
+      img.full {
+        display: inline-block;
+        vertical-align: top;
+      }
       .img {
         display: inline-block;
-        width: 55%;
-        max-width: 550px;
-        vertical-align:top;
+        width: 357.82828282828285px;
+
+        @media screen and (min-width: 50em){
+          width: 396.3636363636364px;
+        }
+        @media screen and (min-width: 61.875em){
+          width: 545px;
+        }
+        img {
+          width: 357.82828282828285px;
+
+          @media screen and (min-width: 50em){
+            width: 396.3636363636364px;
+          }
+          @media screen and (min-width: 61.875em){
+            width: 545px;
+          }
+
+        }
       }
       .copy {
         float: right;
-        width: 37%;
-        max-width: 350px;
+        //width: 460px;
+        max-width: 340px;
         margin-right: 0;
         vertical-align:top;
       }
@@ -446,7 +625,7 @@ main {
       padding-top: 5px;
       background-position: 0 0px;
       margin-left: -40px;
-      text-indent: 8px;
+      text-indent: 9px;
       font-family: 'TeleGrotesk';
       font-size: 22px;
       font-weight: 600;
@@ -461,7 +640,259 @@ main {
 }
 
 
+body.internet #result .box {
+  img.satellit { display: none; }
+}
+body.satellit #result .box {
+  img.internet { display: none; }
+}
 
+body #result.kabel .box {
+  img.lan, img.powerline { display: none; }
+}
+body #result.lan .box {
+  img.kabel, img.powerline { display: none; }
+}
+body #result.powerline .box {
+  img.lan, img.kabel { display: none; }
+}
+
+#result .box .headf { display: none; }
+#result.res-internet-kabel .box     .head-internet-kabel { display: block; }
+#result.res-internet-lan .box       .head-internet-lan { display: block; }
+#result.res-internet-powerline .box .head-internet-powerline { display: block; }
+#result.res-satellit-kabel .box     .head-satellit-kabel { display: block; }
+#result.res-satellit-lan .box       .head-satellit-lan { display: block; }
+#result.res-satellit-powerline .box .head-satellit-powerline { display: block; }
+
+#result .box .copyf { display: none; }
+#result.res-internet-kabel .box     .copy-internet-kabel { display: block; }
+#result.res-internet-lan .box       .copy-internet-lan { display: block; }
+#result.res-internet-powerline .box .copy-internet-powerline { display: block; }
+#result.res-satellit-kabel .box     .copy-satellit-kabel { display: block; }
+#result.res-satellit-lan .box       .copy-satellit-lan { display: block; }
+#result.res-satellit-powerline .box .copy-satellit-powerline { display: block; }
+
+#result.res-internet-kabel .step5a { display: none !important; }
+#result.res-internet-lan .step5a { display: none !important; }
+#result.res-internet-powerline .step5a { display: none !important; }
+
+#result .box .imgf { display: none; }
+
+
+#result.res-internet-kabel .box     .img-internet-kabel-full { display: block; }
+#result.res-internet-lan .box       .img-internet-lan-full { display: block; }
+#result.res-internet-powerline .box .img-internet-powerline-full { display: block; }
+#result.res-satellit-kabel .box     .img-satellit-kabel-full { display: block; }
+#result.res-satellit-lan .box       .img-satellit-lan-full { display: block; }
+#result.res-satellit-powerline .box .img-satellit-powerline-full { display: block; }
+
+@media screen and (min-width: 47.5em) { 
+  #result.res-internet-kabel .box     .img-internet-kabel-full { display: inline-block; }
+  #result.res-internet-lan .box       .img-internet-lan-full { display: inline-block; }
+  #result.res-internet-powerline .box .img-internet-powerline-full { display: inline-block; }
+  #result.res-satellit-kabel .box     .img-satellit-kabel-full { display: inline-block; }
+  #result.res-satellit-lan .box       .img-satellit-lan-full { display: inline-block; }
+  #result.res-satellit-powerline .box .img-satellit-powerline-full { display: inline-block; }
+}
+
+.hotspots {
+  z-index: 9000;
+  width: 100%;
+  height: 100%;
+  li {
+    cursor: pointer;
+  }
+
+}
+.hotspots { width: 315px; left: 50%; transform: translateX(-50%); list-style: none; }
+li.hs {
+  transition: top 1s ease-out 0s, left 1s ease-out 0s;
+}
+
+li.hs-step1 { left: 35%; top: 150px; }
+li.hs-step2 { left: 73%; top: 150px; }
+li.hs-step3 { left: 11%; top: 150px; }
+li.hs-step4 { left: 29%; top: 283px; }
+li.hs-step5 { left: 29%; top: 334px; }
+li.hs-step6 { left: 68%; top: 124px; }
+li.hs-step6 { display: none; }
+
+
+#result.res-satellit-lan, #result.res-satellit-powerline,
+#result.res-internet-lan, #result.res-internet-powerline {
+  li.hs-step1 { left: 35%; top: 150px; }
+  li.hs-step2 { left: 73%; top: 150px; }
+  li.hs-step3 { left: 11%; top: 150px; }
+  li.hs-step4 { left: 33%; top: 258px; }
+  li.hs-step5 { left: 29%; top: 494px; }
+  li.hs-step6 { left: 68%; top: 124px; }
+  li.hs-step6 { display: none !important; }
+}
+#result.res-internet-powerline,
+#result.res-satellit-powerline {
+  li.hs-step4 { left: 33%; top: 268px; }
+  li.hs-step5 { left: 29%; top: 544px; }
+}
+
+#result.res-satellit-kabel {
+  li.hs-step5 { left: 239px; top: 250px; }
+  li.hs-step6 { left: 94px; top: 340px; display: list-item !important; }
+}
+#result.res-satellit-lan {
+  li.hs-step4 { left: 33%; top: 258px; }
+  li.hs-step5 { left: 239px; top: 416px; }
+  li.hs-step6 { left: 94px; top: 494px; display: list-item !important; }
+}
+#result.res-satellit-powerline {
+  li.hs-step1 { left: 35%; top: 150px; }
+  li.hs-step2 { left: 73%; top: 150px; }
+  li.hs-step3 { left: 11%; top: 150px; }
+  li.hs-step4 { left: 33%; top: 268px; }
+  li.hs-step5 { left: 239px; top: 466px; }
+  li.hs-step6 { left: 94px; top: 544px; display: list-item !important; }
+}
+
+
+@media screen and (min-width: 25.625em){
+  .hotspots { width: 370px; left: 50%; transform: translateX(-50%); }
+  li.hs-step1 { left: 30%; top: 200px; }
+  li.hs-step2 { left: 72%; top: 200px; }
+  li.hs-step3 { left: 6%; top: 200px; }
+  li.hs-step4 { left: 24%; top: 395px; }
+  li.hs-step5 { left: 24%; top: 460px; }
+  li.hs-step6 { left: 68%; top: 124px; }
+  li.hs-step6 { display: none !important; }
+
+
+  #result.res-satellit-lan, #result.res-satellit-powerline,
+  #result.res-internet-lan, #result.res-internet-powerline {
+    li.hs-step1 { left: 30%; top: 200px; }
+    li.hs-step2 { left: 72%; top: 200px; }
+    li.hs-step3 { left: 6%; top: 200px; }
+    li.hs-step4 { left: 33%; top: 355px; }
+    li.hs-step5 { left: 24%; top: 680px; }
+    li.hs-step6 { left: 68%; top: 124px; }
+    li.hs-step6 { display: none !important; }
+  }
+  #result.res-internet-powerline,
+  #result.res-satellit-powerline {
+    li.hs-step4 { left: 33%; top: 385px; }
+    li.hs-step5 { left: 24%; top: 750px; }
+  }
+  #result.res-satellit-kabel {
+    li.hs-step5 { left: 299px; top: 350px; }
+    li.hs-step6 { left: 94px; top: 464px; display: list-item !important; }
+  }
+  #result.res-satellit-lan, #result.res-satellit-powerline {
+    li.hs-step4 { left: 33%; top: 368px; }
+    li.hs-step5 { left: 299px; top: 580px; }
+    li.hs-step6 { left: 94px; top: 684px; display: list-item !important; }
+  }
+  #result.res-satellit-powerline {
+    li.hs-step1 { left: 30%; top: 200px; }
+    li.hs-step2 { left: 72%; top: 200px; }
+    li.hs-step3 { left: 6%; top: 200px; }
+    li.hs-step4 { left: 33%; top: 378px; }
+    li.hs-step5 { left: 299px; top: 650px; }
+    li.hs-step6 { left: 94px; top: 744px; display: list-item !important; }
+
+  }
+}
+
+
+@media screen and (min-width: 47.5em){
+  .hotspots { width: 650px; left: 50%; transform: translateX(-50%); }
+  li.hs-step1 { left: 28%; top: 164px; }
+  li.hs-step2 { left: 31%; top: 0px; }
+  li.hs-step3 { left: 37%; top: 255px; }
+  li.hs-step4 { left: 45%; top: 150px; }
+  li.hs-step5 { left: 72%; top: 94px; }
+  li.hs-step6 { left: 450px; top: 124px; }
+  li.hs-step6 { display: none !important; }
+
+  #result.res-satellit-lan, #result.res-satellit-powerline,
+  #result.res-internet-lan, #result.res-internet-powerline {
+    li.hs-step1 { left: 15%; top: 164px; }
+    li.hs-step2 { left: 19%; top: 0px; }
+    li.hs-step3 { left: 25%; top: 255px; }
+    li.hs-step4 { left: 41.4%; top: 100px; }
+    li.hs-step5 { left: 84%; top: 94px; }
+    li.hs-step6 { display: none !important; }
+  }
+  #result.res-satellit-kabel {
+    li.hs-step5 { left: 339px; top: 20px; }
+    li.hs-step6 { left: 470px; top: 83px; display: list-item !important; }
+  }
+  #result.res-satellit-lan, #result.res-satellit-powerline {
+    li.hs-step5 { left: 419px; top: 20px; }
+    li.hs-step6 { left: 544px; top: 84px; display: list-item !important; }
+  }
+}
+
+@media screen and (min-width: 50em){
+  .hotspots { width: 720px; left: 50%; transform: translateX(-50%); }
+  li.hs-step1 { left: 27%; top: 174px; }
+  li.hs-step2 { left: 30%; top: 11px; }
+  li.hs-step3 { left: 38%; top: 285px; }
+  li.hs-step4 { left: 44%; top: 130px; }
+  li.hs-step5 { left: 72%; top: 94px; }
+  li.hs-step6 { left: 450px; top: 124px; }
+  li.hs-step6 { display: none !important; }
+
+
+  #result.res-satellit-lan, #result.res-satellit-powerline,
+  #result.res-internet-lan, #result.res-internet-powerline {
+    li.hs-step1 { left: 15%; top: 174px; }
+    li.hs-step2 { left: 18%; top: 11px; }
+    li.hs-step3 { left: 18%; top: 285px; }
+    li.hs-step4 { left: 41.3%; top: 110px; }
+    li.hs-step5 { left: 84%; top: 94px; }
+    li.hs-step6 { display: none !important; }
+  }
+  #result.res-satellit-kabel {
+    li.hs-step5 { left: 379px; top: 30px; }
+    li.hs-step6 { left: 520px; top: 90px; display: list-item !important; }
+  }
+  #result.res-satellit-lan, #result.res-satellit-powerline {
+    li.hs-step5 { left: 469px; top: 30px; }
+    li.hs-step6 { left: 600px; top: 94px; display: list-item !important; }
+  }
+}
+// 990 - biggest
+@media screen and (min-width: 61.875em){
+  .hotspots { width: 100%; left: 50%; transform: translateX(-50%); }
+  li.hs-step1 { left: 240px; top: 224px; }
+  li.hs-step2 { left: 278px; top: 11px; }
+  li.hs-step3 { left: 326px; top: 345px; }
+  li.hs-step4 { left: 410px; top: 170px; }
+  li.hs-step5 { left: 650px; top: 124px; }
+  li.hs-step6 { left: 450px; top: 124px; }
+
+  #result.res-satellit-lan, #result.res-satellit-powerline,
+  #result.res-internet-lan, #result.res-internet-powerline {
+    li.hs-step1 { left: 130px; top: 224px; }
+    li.hs-step2 { left: 168px; top: 11px; }
+    li.hs-step3 { left: 236px; top: 345px; }
+    li.hs-step4 { left: 378px; top: 150px; }
+    li.hs-step5 { left: 760px; top: 124px; }
+    li.hs-step6 { left: 760px; top: 124px; }
+    li.hs-step6 { display: none !important;  }
+  }
+  #result.res-satellit-kabel {
+    li.hs-step5 { left: 489px; top: 30px; }
+    li.hs-step6 { left: 660px; top: 124px; display: list-item !important; }
+  }
+  #result.res-satellit-lan, #result.res-satellit-powerline {
+    li.hs-step5 { left: 599px; top: 30px; }
+    li.hs-step6 { left: 770px; top: 124px; display: list-item !important; }
+  }
+}
+
+
+
+
+// -110 + 110
 
 
 
