--- a/app/styles/brand-header.scss
+++ b/app/styles/brand-header.scss
@@ -429,7 +429,7 @@
         background: transparent;
         margin-top: 0;
         height: $bu*6;
-        display: table;
+        display: table !important;
         li {
           pointer-events: auto;
           display: table-cell;
